# question-evaluation-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: aspects.yaml  settings.yaml
data/: README.md
data/pipeline/: align.py  extract.py  flatten.py  loader.py
data/results/: 14.06_results.jsonl  14.382_results.jsonl  18.100A_results.jsonl  6.042J_results.jsonl  6.046J_results.jsonl  6.830_results.jsonl  8.04_results.jsonl  8.321_results.jsonl  HST.151_results.jsonl  HST.542J_results.jsonl
notebooks/: dataset_exploration.ipynb  evaluation.ipynb  global_analysis.ipynb  llm_comparison_6042J.ipynb
scripts/: run_all.py
src/: README.md  evaluator.py  models.py  pipeline.py  reporter.py  scorer.py
src/aspects/: base.py  fairness_ethics.py  linguistic_structural.py  pedagogical.py  psychometric.py
src/dimensions/: base.py
src/metrics/: __init__.py  ari.py  bartscore.py  base.py  base_readability.py  bertscore.py  bleu.py  bleurt.py  bloom_level.py  bm25.py  chrf.py  coleman_liau.py  comet.py  conjunction_rate.py  constituent_count.py  dale_chall.py  dependency_distance.py  distinct_n.py  dok_level.py  dp_epsilon_risk.py  flesch_ease.py  flesch_kincaid.py  gunning_fog.py  has_verb.py  hots_keywords.py  k_anonymity_risk.py  lexical_density.py  linsear_write.py  lm_perplexity.py  meteor.py  multipart_question.py  negation_ambiguity.py  negation_rate.py  nli.py  openendedness.py  parse_tree_depth.py  passive_voice_rate.py  pii_risk.py  polysemy.py  (+17 more)
tests/: conftest.py  test_base_classes.py  test_models.py
(+109 files in other folders)
