[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eval-framework"
version = "0.1.0"
description = "Evaluation Framework for Educational Questions"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    # SWIG C-extension warnings from bleurt's sentencepiece dependency — not actionable.
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    # Old torchvision Pillow resampling constants — not actionable (torchvision dependency).
    "ignore:BILINEAR is deprecated:DeprecationWarning",
    "ignore:NEAREST is deprecated:DeprecationWarning",
    "ignore:BICUBIC is deprecated:DeprecationWarning",
    # scipy/numpy version mismatch — not actionable (scipy 1.7.x + numpy 1.25+).
    "ignore:np.find_common_type is deprecated:DeprecationWarning",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
